--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
     <!-- END HEADER -->
 
     <!-- ABOUT -->
-    <section id="about">
+<!--     <section id="about">
         <div class="container">
             <div class="section-heading">
                 <p class="subtitle">
@@ -524,7 +524,7 @@
             </div>
 
         </div>
-    </section>
+    </section> -->
     <!-- END ABOUT -->
     <!-- COUNTDOWN END INVITATION-->
     <section id="countdown-section" class="">
@@ -670,7 +670,7 @@
     <!-- END DRESS CODE -->
     <!-- TIMELINE -->
     
-            <section id="time-line" class="time-line-section img_bg bg_overlay" style="background-image:url(images/QzArrQI3QOAEUmK6fcoy7LQQeNAIZIwGFgl1SQhc.jpg); margin-bottom: 80px;">
+      <!--       <section id="time-line" class="time-line-section img_bg bg_overlay" style="background-image:url(images/QzArrQI3QOAEUmK6fcoy7LQQeNAIZIwGFgl1SQhc.jpg); margin-bottom: 80px;">
 
             <div class="time-line container">
 
@@ -740,7 +740,7 @@
 
             </div>
 
-        </section>
+        </section> -->
     
 
 
